# surgebox

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  resources
libs/r8brain-free-src/: CDSPBlockConvolver.h  CDSPFIRFilter.h  CDSPFracInterpolator.h  CDSPHBDownsampler.h  CDSPHBDownsampler.inc  CDSPHBUpsampler.h  CDSPHBUpsampler.inc  CDSPProcessor.h  CDSPRealFFT.h  CDSPResampler.h  CDSPSincFilterGen.h  DLL  LICENSE  README.md  bench  example.cpp  fft4g.h  other  pffft.cpp  pffft.h  pffft_double  r8bbase.cpp  r8bbase.h  r8bconf.h  r8butil.h
src/core/: GrooveboxProject.cpp  GrooveboxProject.h  PatternModel.cpp  PatternModel.h  SurgeBoxEngine.cpp  SurgeBoxEngine.h
src/gui/: SurgeBoxLookAndFeel.h
src/gui/widgets/: PianoRollWidget.cpp  PianoRollWidget.h  SynthControlPanel.cpp  SynthControlPanel.h  TransportControls.cpp  TransportControls.h  VoiceSelector.cpp  VoiceSelector.h
src/plugin/: SurgeBoxEditor.cpp  SurgeBoxEditor.h  SurgeBoxProcessor.cpp  SurgeBoxProcessor.h
